feature #4474 :  removing all EJB 2.1 Website is now really stateless